# coe-submissions

./: README.md
.github/workflows/: task-manager.workflow.yml
frontend-playground/: package-lock.json  package.json  vite.config.ts
frontend-playground/src/: App.tsx
frontend-playground/src/components/: Navbar.test.tsx  Navbar.tsx
hello_world_app/fastapi/: main.py  pyproject.toml  test_hello.py
hello_world_app/flask/: main.py  pyproject.toml  test_main.py
prisma-graphql/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
prisma-graphql/prisma/: schema.prisma
prisma-graphql/src/: context.ts  schema.ts  server.ts
react-state-mangement/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
react-state-mangement/src/: App.tsx
task-manager/: .env.sample  Makefile  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml
task-manager-backend/: .gitignore  README.md  main.py  postgres-container.sh  pyproject.toml
task-manager-backend/app/: main.py
task-manager-backend/tests/: conftest.py  test_task_schema.py
task-manager-frontend/: package-lock.json  package.json  vite.config.ts
task-manager-frontend/src/: Routes.tsx  index.css  main.tsx
task-manager/task-manager-backend/: .dockerignore  .gitignore  README.md  entrypoint.sh  pyproject.toml
task-manager/task-manager-frontend/: package.json  tsconfig.app.json
user-registration/: README.md  fastapiapp.py  flaskapp.py  main.py  pyproject.toml  test_fastapi.py  test_flask.py  test_main.py  test_user_registration.py
(+126 files in other folders)
